// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableWithFilter should render loading and pagination 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section pf-m-align-items-center"
      >
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__lg"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="Loading"
    class="pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="SkeletonTable"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
    rows="10"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="SkeletonTable-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-ouia-component-id="SkeletonTable-th-0"
          scope="col"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      data-ouia-component-id="SkeletonTable-tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-0"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="SkeletonTable-td-0-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-1"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="SkeletonTable-td-1-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-2"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="SkeletonTable-td-2-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-3"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="SkeletonTable-td-3-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </td>
      </tr>
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-4"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-ouia-component-id="SkeletonTable-td-4-0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-skeleton"
          >
            <span
              class="pf-v6-screen-reader"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableWithFilter should render with data 1`] = `
<div>
  <table
    aria-label="undefined tags"
    class="ins-c-tag-modal__table pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Table-:rg:"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:rh:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-key="0"
          data-label="something"
          scope="col"
          tabindex="-1"
        >
          something
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:ri:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-key="0"
          data-label="something"
          tabindex="-1"
        >
          one
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableWithFilter should render with data and bulk select with calculate checked 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section pf-m-align-items-center"
      >
        <div
          class="pf-v6-c-toolbar__item"
        >
          <button
            aria-expanded="false"
            class="pf-v6-c-menu-toggle"
            data-ouia-component-id="BulkSelect"
            data-ouia-component-type="PF6/MenuToggle"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-menu-toggle__text"
            >
              <label
                class="pf-v6-c-check pf-m-standalone"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select all"
                  class="pf-v6-c-check__input"
                  data-ouia-component-id="BulkSelectCheckbox"
                  data-ouia-component-type="PF6/MenuToggleCheckbox"
                  data-ouia-safe="true"
                  name="toggle-checkbox"
                  type="checkbox"
                />
              </label>
            </span>
            <span
              class="pf-v6-c-menu-toggle__controls"
            >
              <span
                class="pf-v6-c-menu-toggle__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-v6-c-pagination"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF6/Pagination"
            data-ouia-safe="true"
            id="options-menu-top-pagination"
            style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-v6-c-pagination__total-items"
            >
              <b>
                1
                 - 
                10
              </b>
               
              of
               
              <b>
                0
              </b>
               
            </div>
            <div
              class="pf-v6-c-pagination__page-menu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r2v:"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__text"
                >
                  <b>
                    1
                     - 
                    10
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-v6-c-pagination__nav"
            >
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to previous page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r30:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to next page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r31:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="undefined tags"
    class="ins-c-tag-modal__table pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Table-:r32:"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r33:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th pf-v6-c-table__check"
          data-key="0"
          data-label=""
          scope=""
          tabindex="-1"
        >
          <div
            class="pf-v6-c-check pf-m-standalone"
          >
            <input
              aria-invalid="false"
              aria-label="Select all rows"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-:r35:"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="select-all"
              type="checkbox"
            />
          </div>
        </th>
        <th
          class="pf-v6-c-table__th"
          data-key="1"
          data-label="something"
          scope="col"
          tabindex="-1"
        >
          something
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r36:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td pf-v6-c-table__check"
          data-key="0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-check pf-m-standalone"
          >
            <input
              aria-invalid="false"
              aria-label="Select row 0"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-:r38:"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="select-0"
              type="checkbox"
            />
          </div>
        </td>
        <td
          class="pf-v6-c-table__td"
          data-key="1"
          data-label="something"
          tabindex="-1"
        >
          one
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar ins-m-footer ins-c-inventory__table--toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r39:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:r3a:"
  >
    <div
      class="pf-v6-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-:r3c:"
      data-ouia-component-type="PF6/Pagination"
      data-ouia-safe="true"
      id="options-menu-bottom-pagination"
      style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
    >
      <div
        class="pf-v6-c-pagination__page-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r3e:"
          data-ouia-component-type="PF6/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-menu-toggle__text"
          >
            <b>
              1
               - 
              10
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v6-c-menu-toggle__controls"
          >
            <span
              class="pf-v6-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-v6-c-pagination__nav"
      >
        <div
          class="pf-v6-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-label="Go to first page"
            class="pf-v6-c-button pf-m-plain"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r3f:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to previous page"
            class="pf-v6-c-button pf-m-plain"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r3g:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-page-select"
        >
          <span
            class="pf-v6-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="Current page"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:r3i:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              max="2"
              min="1"
              type="number"
              value="1"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to next page"
            class="pf-v6-c-button pf-m-plain"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r3j:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-label="Go to last page"
            class="pf-v6-c-button pf-m-plain"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r3k:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`TableWithFilter should render with data and bulk select without calculate checked 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section pf-m-align-items-center"
      >
        <div
          class="pf-v6-c-toolbar__item"
        >
          <button
            aria-expanded="false"
            class="pf-v6-c-menu-toggle"
            data-ouia-component-id="BulkSelect"
            data-ouia-component-type="PF6/MenuToggle"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-menu-toggle__text"
            >
              <label
                class="pf-v6-c-check pf-m-standalone"
              >
                <input
                  aria-invalid="false"
                  aria-label="Select all"
                  class="pf-v6-c-check__input"
                  data-ouia-component-id="BulkSelectCheckbox"
                  data-ouia-component-type="PF6/MenuToggleCheckbox"
                  data-ouia-safe="true"
                  name="toggle-checkbox"
                  type="checkbox"
                />
              </label>
            </span>
            <span
              class="pf-v6-c-menu-toggle__controls"
            >
              <span
                class="pf-v6-c-menu-toggle__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 20 20"
                  width="1em"
                >
                  <path
                    d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-v6-c-pagination"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF6/Pagination"
            data-ouia-safe="true"
            id="options-menu-top-pagination"
            style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-v6-c-pagination__total-items"
            >
              <b>
                1
                 - 
                10
              </b>
               
              of
               
              <b>
                0
              </b>
               
            </div>
            <div
              class="pf-v6-c-pagination__page-menu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r1v:"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__text"
                >
                  <b>
                    1
                     - 
                    10
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-v6-c-pagination__nav"
            >
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to previous page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r20:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to next page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r21:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="undefined tags"
    class="ins-c-tag-modal__table pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Table-:r22:"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r23:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th pf-v6-c-table__check"
          data-key="0"
          data-label=""
          scope=""
          tabindex="-1"
        >
          <div
            class="pf-v6-c-check pf-m-standalone"
          >
            <input
              aria-invalid="false"
              aria-label="Select all rows"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-:r25:"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="select-all"
              type="checkbox"
            />
          </div>
        </th>
        <th
          class="pf-v6-c-table__th"
          data-key="1"
          data-label="something"
          scope="col"
          tabindex="-1"
        >
          something
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r26:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td pf-v6-c-table__check"
          data-key="0"
          tabindex="-1"
        >
          <div
            class="pf-v6-c-check pf-m-standalone"
          >
            <input
              aria-invalid="false"
              aria-label="Select row 0"
              class="pf-v6-c-check__input"
              data-ouia-component-id="OUIA-Generated-Checkbox-:r28:"
              data-ouia-component-type="PF6/Checkbox"
              data-ouia-safe="true"
              id="select-0"
              type="checkbox"
            />
          </div>
        </td>
        <td
          class="pf-v6-c-table__td"
          data-key="1"
          data-label="something"
          tabindex="-1"
        >
          one
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar ins-m-footer ins-c-inventory__table--toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:r29:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:r2a:"
  >
    <div
      class="pf-v6-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-:r2c:"
      data-ouia-component-type="PF6/Pagination"
      data-ouia-safe="true"
      id="options-menu-bottom-pagination"
      style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
    >
      <div
        class="pf-v6-c-pagination__page-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r2e:"
          data-ouia-component-type="PF6/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-menu-toggle__text"
          >
            <b>
              1
               - 
              10
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v6-c-menu-toggle__controls"
          >
            <span
              class="pf-v6-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-v6-c-pagination__nav"
      >
        <div
          class="pf-v6-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-label="Go to first page"
            class="pf-v6-c-button pf-m-plain"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r2f:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to previous page"
            class="pf-v6-c-button pf-m-plain"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r2g:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-page-select"
        >
          <span
            class="pf-v6-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="Current page"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:r2i:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              max="2"
              min="1"
              type="number"
              value="1"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to next page"
            class="pf-v6-c-button pf-m-plain"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r2j:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-label="Go to last page"
            class="pf-v6-c-button pf-m-plain"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r2k:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`TableWithFilter should render with data and filters 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section pf-m-align-items-center"
      >
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__filter"
        >
          <div
            class="pf-v6-l-split ins-c-conditional-filter ins-c-conditional-filter__split-items-space"
          >
            <div
              class="pf-v6-l-split__item pf-m-fill"
              data-ouia-component-id="ConditionalFilter"
            >
              <span
                class="pf-v6-c-form-control pf-m-icon ins-c-conditional-filter"
              >
                <input
                  aria-invalid="false"
                  aria-label="text input"
                  data-ouia-component-id="ConditionalFilter"
                  data-ouia-component-type="PF6/TextInput"
                  data-ouia-safe="true"
                  placeholder="Filter by undefined"
                  type="text"
                  value=""
                  widget-type="InsightsInput"
                />
                <span
                  class="pf-v6-c-form-control__utilities"
                >
                  <span
                    class="pf-v6-c-form-control__icon"
                  >
                    <span
                      class="pf-v6-c-icon pf-m-md ins-c-search-icon"
                    >
                      <span
                        class="pf-v6-c-icon__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v6-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          width="1em"
                        >
                          <svg
                            class="pf-v6-icon-default"
                            viewBox="0 0 512 512"
                          >
                            <path
                              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                            />
                          </svg>
                          <svg
                            class="pf-v6-icon-rh-ui"
                            viewBox="0 0 32 32"
                          >
                            <path
                              d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                            />
                          </svg>
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-v6-c-pagination"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF6/Pagination"
            data-ouia-safe="true"
            id="options-menu-top-pagination"
            style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-v6-c-pagination__total-items"
            >
              <b>
                1
                 - 
                10
              </b>
               
              of
               
              <b>
                0
              </b>
               
            </div>
            <div
              class="pf-v6-c-pagination__page-menu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r1f:"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__text"
                >
                  <b>
                    1
                     - 
                    10
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-v6-c-pagination__nav"
            >
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to previous page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r1g:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to next page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:r1h:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="undefined tags"
    class="ins-c-tag-modal__table pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Table-:r1i:"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r1j:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-key="0"
          data-label="something"
          scope="col"
          tabindex="-1"
        >
          something
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:r1k:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-key="0"
          data-label="something"
          tabindex="-1"
        >
          one
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableWithFilter should render with data and pagination 1`] = `
<div>
  <div
    class="pf-v6-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF6/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-v6-c-toolbar__content"
    >
      <div
        class="pf-v6-c-toolbar__content-section pf-m-align-items-center"
      >
        <div
          class="pf-v6-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-v6-c-pagination"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF6/Pagination"
            data-ouia-safe="true"
            id="options-menu-top-pagination"
            style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-v6-c-pagination__total-items"
            >
              <b>
                1
                 - 
                10
              </b>
               
              of
               
              <b>
                0
              </b>
               
            </div>
            <div
              class="pf-v6-c-pagination__page-menu"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:rn:"
                data-ouia-component-type="PF6/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v6-c-menu-toggle__text"
                >
                  <b>
                    1
                     - 
                    10
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v6-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v6-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-v6-c-pagination__nav"
            >
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to previous page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:ro:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-pagination__nav-control"
              >
                <button
                  aria-label="Go to next page"
                  class="pf-v6-c-button pf-m-plain"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rp:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      width="1em"
                    >
                      <svg
                        class="pf-v6-icon-default"
                        viewBox="0 0 256 512"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                        />
                      </svg>
                      <svg
                        class="pf-v6-icon-rh-ui"
                        viewBox="0 0 32 32"
                      >
                        <path
                          d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                        />
                      </svg>
                    </svg>
                  </span>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="undefined tags"
    class="ins-c-tag-modal__table pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Table-:rq:"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:rr:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th"
          data-key="0"
          data-label="something"
          scope="col"
          tabindex="-1"
        >
          something
        </th>
      </tr>
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="OUIA-Generated-TableRow-:rs:"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-v6-c-table__td"
          data-key="0"
          data-label="something"
          tabindex="-1"
        >
          one
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-v6-c-toolbar ins-c-table__toolbar ins-m-footer ins-c-inventory__table--toolbar"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-:rt:"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-:ru:"
  >
    <div
      class="pf-v6-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-:r10:"
      data-ouia-component-type="PF6/Pagination"
      data-ouia-safe="true"
      id="options-menu-bottom-pagination"
      style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
    >
      <div
        class="pf-v6-c-pagination__page-menu"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r12:"
          data-ouia-component-type="PF6/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v6-c-menu-toggle__text"
          >
            <b>
              1
               - 
              10
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v6-c-menu-toggle__controls"
          >
            <span
              class="pf-v6-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-v6-c-pagination__nav"
      >
        <div
          class="pf-v6-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-label="Go to first page"
            class="pf-v6-c-button pf-m-plain"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r13:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M10 19a.997.997 0 0 1-.707-.293l-7.647-7.646c-.283-.284-.439-.66-.439-1.061s.156-.777.44-1.06l7.646-7.647a1 1 0 1 1 1.414 1.414L3.414 10l7.293 7.293A1 1 0 0 1 10 19Zm8.707-.293a1 1 0 0 0 0-1.414L11.414 10l7.293-7.293a1 1 0 1 0-1.414-1.414L9.646 8.939c-.283.284-.439.66-.439 1.061s.156.777.44 1.06l7.646 7.647a.997.997 0 0 0 1.414 0Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to previous page"
            class="pf-v6-c-button pf-m-plain"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r14:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-page-select"
        >
          <span
            class="pf-v6-c-form-control"
          >
            <input
              aria-invalid="false"
              aria-label="Current page"
              data-ouia-component-id="OUIA-Generated-TextInputBase-:r16:"
              data-ouia-component-type="PF6/TextInput"
              data-ouia-safe="true"
              max="2"
              min="1"
              type="number"
              value="1"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control"
        >
          <button
            aria-label="Go to next page"
            class="pf-v6-c-button pf-m-plain"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r17:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 256 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-label="Go to last page"
            class="pf-v6-c-button pf-m-plain"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r18:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                width="1em"
              >
                <svg
                  class="pf-v6-icon-default"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                  />
                </svg>
                <svg
                  class="pf-v6-icon-rh-ui"
                  viewBox="0 0 32 32"
                >
                  <path
                    d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                  />
                </svg>
              </svg>
            </span>
          </button>
        </div>
      </nav>
    </div>
    <div
      class="pf-v6-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-v6-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`TableWithFilter should render without data 1`] = `
<div>
  <table
    aria-label="Loading"
    class="pf-v6-c-table pf-m-grid-md pf-m-compact"
    data-ouia-component-id="SkeletonTable"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
    rows="10"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="SkeletonTable-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
    </thead>
    <tbody
      class="pf-v6-c-table__tbody"
      data-ouia-component-id="SkeletonTable-tbody"
      role="rowgroup"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-0"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-1"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-2"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-3"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTable-tr-4"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      />
    </tbody>
  </table>
</div>
`;
